--- a/consolution/index.html
+++ b/consolution/index.html
@@ -41,7 +41,7 @@
 					    <div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
 					    	<div class="icon d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
 						    <div class="text">
-						    	<span>Call ModSyed@</span>
+						    	<span>Call CustomerCare@</span>
 						    	<span>Call Us: + 7737867100</span>
 						    </div>
 					    </div>
