--- a/consolution/index.html
+++ b/consolution/index.html
@@ -27,7 +27,7 @@
     	<div class="container">
     		<div class="row no-gutters d-flex align-items-center align-items-stretch">
     			<div class="col-md-4 d-flex align-items-center py-4">
-    				<a class="navbar-brand" href="index.html">Mod Syed WebSite </a>
+    				<a class="navbar-brand" href="index.html">My Fucking WebSite </a>
     			</div>
 	    		<div class="col-lg-8 d-block">
 		    		<div class="row d-flex">
@@ -42,7 +42,7 @@
 					    	<div class="icon d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
 						    <div class="text">
 						    	<span>Call CustomerCare@</span>
-						    	<span>Call Us: + 7737867100</span>
+						    	<span>Call Us @ 123456789 </span>
 						    </div>
 					    </div>
 					    <div class="col-md topper d-flex align-items-center justify-content-end">
